--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <button id="convert-btn">Convert</button>
         </div>
         <div class="box">
-            <p class="purple-text">Length (Meter/Feet)</p>
+            <p class="purple-text">Length (Meters/Feet)</p>
             <p id="length"></p>
         </div>
         <div class="box">
@@ -25,7 +25,7 @@
             <p id="volume"></p>
         </div>
         <div class="box">
-            <p class="purple-text">Mass (Kilorams/Pounds)</p>
+            <p class="purple-text">Mass (Kilograms/Pounds)</p>
             <p id="mass"></p>
         </div>
         <script src="script.js"></script>
