added millimeters to inches
for dad :)

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
             <p id="length"></p>
         </div>
         <div class="box">
+            <p class="purple-text">Length (Millimeters/Inches)</p>
+            <p id="length-small"></p>
+        </div>
+        <div class="box">
             <p class="purple-text">Volume (Liters/Gallons)</p>
             <p id="volume"></p>
         </div>
